<resources>

    <string name="app_name">TeleDoctor</string>
    <string name="medabin">Medabin</string>
    <string name="tele_doctor">Tele doctor</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact">Contacts</string>
    <string name="groups">Groups</string>
    <string name="chat">Chat</string>
    <string name="group">group is Created Succesfully..</string>
    <string name="logo_name">Medical Assitant</string>
    <string name="slogan_name">Everyone can hurts but
    Only GOD can heals...</string>
    <string name="duplicate">Please check username is duplicate or not first. To check click on me </string>
    But only GOD can heals....
    <!--Titles-->
    <string name="first_slide_title">Pill Reminder</string>
    <string name="second_slide_title">Warning!!</string>
    <string name="third_slide_title">Cost and planning</string>
    <string name="fourth_slide_title">Help to be fit</string>
    <string name="fifth_slide_title">Medical note</string>
    <string name="sixth_slide_title">Ranking</string>
    <string name="seventh_slide_title">Record</string>
    <string name="eighth_slide_title">Hospital info and tips</string>

    <!--Descriptions-->
    <string name="first_slide_desc">You can give reminder to your medicine and can put notification for task </string>
    <string name="second_slide_desc">Warning for end of medicine</string>
    <string name="third_slide_desc">How much money will you need to buy your medicine and if you go outside medicine planning</string>
    <string name="fourth_slide_desc">Updating weight,height,pressure,water level BMI and many other activity to keep you fit </string>
    <string name="fifth_slide_desc">Take o note of medical symtomps that help in the appoinment of the doctor</string>
    <string name="sixth_slide_desc">Ranking the medicine,doctor according to your feedback</string>
    <string name="seventh_slide_desc">Keep record of your medical profiles</string>
    <string name="eighth_slide_desc">Hospital info like hospital cost,location,phone number and some basic beauty and healthy tips</string>

    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="navigation_drawer_open">Open Navigation drawer</string>
    <string name="navigation_drawer_close">Close Navigation drawer</string>


    <string name="schedule_hint_text_1">How often you take the medicine Suppose you take the medicine at morning and night it means 2 times in a day.Then your schedule is 1 day and consume is 2 times.</string>
    <string name="schedule_hint_text_2">Just write the duration in days and must input as number</string>
    <string name="consume_hint_text_1">How much in quantity you consume in your selected schedule. Suppose you have a injection which you need to take 1 time after 7 days. Then select schedule 7 and select consume 1. If you take half just input .5</string>
    <string name="consume_hint_text_2">Just write the consume quantity in decimal number</string>
    <string name="rate_hint_text_1">Just write the rate in bdt . Input it as decimal number</string>
    <string name="medi_note_dashboard">Medi Note</string>
    <string name="title_activity_medinote_details">medinoteDetails</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="warning_search_time_medinote">Here 12 means 00 so if you want to search for 12:12 day you will input 00:12 PM and if you search for night 12:12 you will input 00:12 AM</string>
    <string name="text_warning_medinote_search_details">Showing details in suggestion list is very inefficient so we will not show any suggestion here</string>
    <string name="regular_medicine_warning">If you take this medicine regulary in a day then fill it otherwise select others</string>
    <string name="details_tips_1">The start of a new decade brings with it new resolutions to improve one’s life, including a healthier lifestyle. Here are 20 practical health tips to help you start off towards healthy living in 2020. 1. Eat a healthy diet 1_20190529_091438_LR Photo: FAO/J. Grey Eat a combination of different foods, including fruit, vegetables, legumes, nuts and whole grains. Adults should eat at least five portions (400g) of fruit and vegetables per day. You can improve your intake of fruits and vegetables by always including veggies in your meal; eating fresh fruit and vegetables as snacks; eating a variety of fruits and vegetables; and eating them in season. By eating healthy, you will reduce your risk of malnutrition and noncommunicable diseases (NCDs) such as diabetes, heart disease, stroke and cancer.</string>
    <string name="tips_details_salt">Filipinos consume twice the recommended amount of sodium, putting them at risk of high blood pressure, which in turn increases the risk of heart disease and stroke. Most people get their sodium through salt. Reduce your salt intake to 5g per day, equivalent to about one teaspoon. It’s easier to do this by limiting the amount of salt, soy sauce, fish sauce and other high-sodium condiments when preparing meals; removing salt, seasonings and condiments from your meal table; avoiding salty snacks; and choosing low-sodium products. On the other hand, consuming excessive amounts of sugars increases the risk of tooth decay and unhealthy weight gain. In both adults and children, the intake of free sugars should be reduced to less than 10% of total energy intake. This is equivalent to 50g or about 12 teaspoons for an adult. WHO recommends consuming less than 5% of total energy intake for additional health benefits. You can reduce your sugar intake by limiting the consumption of sugary snacks, candies and sugar-sweetened beverages.</string>
    <string name="details_tips_fat_food">Fats consumed should be less than 30% of your total energy intake. This will help prevent unhealthy weight gain and NCDs. There are different types of fats, but unsaturated fats are preferable over saturated fats and trans-fats. WHO recommends reducing saturated fats to less than 10% of total energy intake; reducing trans-fats to less than 1% of total energy intake; and replacing both saturated fats and trans-fats to unsaturated fats. The preferable unsaturated fats are found in fish, avocado and nuts, and in sunflower, soybean, canola and olive oils; saturated fats are found in fatty meat, butter, palm and coconut oil, cream, cheese, ghee and lard; and trans-fats are found in baked and fried foods, and pre-packaged snacks and foods, such as frozen pizza, cookies, biscuits, and cooking oils and spreads.</string>
    <string name="text_doctor_feedback_add_notice">Enter doctor name you want to give feedback\nyou can put also half star</string>

</resources>
