<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".medicinePlanner.addMedicineMediplanner"
    android:background="@drawable/login_back"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/button2"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@android:color/white"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/carter_one"
            android:gravity="center|start"
            android:text="Add New Medicine"
            android:textColor="@color/dark_green"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="72dp"
            tools:layout_editor_absoluteY="10dp" />


    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_marginTop="62dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            android:orientation="vertical"
            android:padding="12dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="Medicine Name"
                android:id="@+id/medicine_name"
                app:boxStrokeColor="@color/dark_orange">

                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/dark_orange"
                    android:textColor="@color/dark_orange"
                    />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:hint="Medicine Company Name"
                android:id="@+id/company_name"
                app:boxStrokeColor="@color/dark_orange">

                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/dark_orange"
                    android:textColor="@color/dark_orange"

                    />


            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/schedule_hint_text_1"
                android:layout_marginBottom="12dp"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/dark_blue"
                android:text="@string/schedule_hint_text_2"
                android:layout_marginBottom="2dp"
                />



            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:layout_marginTop="2dp"
                android:hint="Schedule"
                android:id="@+id/schedule_medicine"
                app:boxStrokeColor="@color/dark_orange">

                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColorHint="@color/dark_orange"
                    android:textColor="@color/dark_orange"
                    />


            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/consume_hint_text_1"
                android:layout_marginBottom="12dp"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/dark_blue"
                android:text="@string/consume_hint_text_2"
                android:layout_marginBottom="2dp"
                />




            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:layout_marginTop="2dp"
                android:hint="Consume"
                android:id="@+id/consume_medicine"
                app:boxStrokeColor="@color/dark_orange">

                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/dark_orange"
                    android:textColor="@color/dark_orange"
                    android:inputType="numberDecimal"
                    />


            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/dark_blue"
                android:text="@string/rate_hint_text_1"
                android:layout_marginBottom="2dp"
                />


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:hint="Medicine Rate"
                android:id="@+id/medicine_rate"
                app:boxStrokeColor="@color/dark_orange">

                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/dark_orange"
                    android:textColor="@color/dark_orange"
                    android:inputType="numberDecimal"
                    />


            </com.google.android.material.textfield.TextInputLayout>

            <Switch
                android:id="@+id/switch1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Currently cosuming the medicine?" />

            <Button
                android:id="@+id/buttonAddMedicine"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/button4"
                android:fontFamily="@font/allan_bold"
                android:text="Add Medicine"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>